--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,13 @@
-.active-link{
-    background: linear-gradient(45deg, #f9c311, #fff0f0f5);
+.font-16{
+    font-size: 16px !important;
+}
+.password-show + i{
+    float: right;
+    cursor: pointer;
+    margin-right: 15px;
+    margin-top: -30px;
+    font-size: 16px;
+}
+.font-22{
+    font-size: 22px;
 }
