--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,13 +1,60 @@
-.font-16{
+.font-16 {
     font-size: 16px !important;
 }
-.password-show + i{
+
+.password-show+i {
     float: right;
     cursor: pointer;
     margin-right: 15px;
     margin-top: -30px;
     font-size: 16px;
 }
-.font-22{
+
+.font-22 {
     font-size: 22px;
+}
+
+.toggle-details {
+    cursor: pointer;
+}
+
+
+.fnt-20 {
+    font-size: 20px;
+}
+
+table.dataTable.table-striped>tbody>tr.odd>* {
+    box-shadow: inset 0 0 0 9999px rgb(141 141 141 / 5%) !important;
+}
+
+/* .details-content {
+    border: 1px solid #ecf3fb;
+    border-radius: 4px;
+    background: #f9f9f9;
+    padding: 15px
+} */
+.text-wrap{
+    display: block;
+    white-space: normal;
+    word-break: normal;
+}
+.frm-select {
+    border-radius: 0.25rem !important;
+    padding: 0.375rem 0.75rem !important;
+    font-size: 0.8125rem !important;
+    line-height: 1.7 !important;
+}
+.choices[data-type*=select-one] .choices__inner {
+    padding-bottom: 7.5px;
+    font-size: 0.8125rem;
+    font-weight: var(--default-font-weight);
+    line-height: 1.7;
+    border-radius: 0.25rem !important;
+    padding: 0.375rem 0.75rem;
+}
+.ql-container{
+    height: auto !important;
+}
+.fs-6{
+    font-size: 0.9rem !important;
 }
